syntax = "proto3";
package com.coralogixapis.alerting.alert_scheduler_rule_protobuf.v1;

import "com/coralogixapis/alerting/meta_labels_protobuf/v1/meta_labels.proto";

message Filter {
  string what_expression = 1; // Filter what_expression: dataprime expression that filter the alerts group by values.
  oneof which_alerts {
    MetaLabels alert_meta_labels = 2; // Filter alert_meta_labels: filter alerts by meta labels tagging.
    AlertUniqueIds alert_unique_ids = 3; // Filter alert_unique_ids: filter specific alerts (when alert_unique_ids is empty meaning it wil filter all alerts).
  }
}

message AlertUniqueIds {
  repeated string value = 1;
}

message MetaLabels {
  repeated com.coralogixapis.alerting.meta_labels_protobuf.v1.MetaLabel value = 1;
}
