syntax = "proto3";
package com.coralogixapis.alerting.alert_scheduler_rule_protobuf.v1;
import "com/coralogixapis/alerting/meta_labels_protobuf/v1/meta_labels.proto";
import "com/coralogixapis/alerting/alert_scheduler_rule_protobuf/v1/alert_scheduler_filter.proto";
import "com/coralogixapis/alerting/alert_scheduler_rule_protobuf/v1/schedule.proto";


message AlertSchedulerRule {
  optional string unique_identifier = 1; // Rule unique_identifier: The rule id.
  optional string id = 2; // Rule id: The rule version id.
  string name = 3; // Rule name.
  optional string description = 4; // Rule description.
  repeated com.coralogixapis.alerting.meta_labels_protobuf.v1.MetaLabel meta_labels = 5; // Rule meta_labels: Rule tags over the system.
  Filter filter = 6; // Rule filter: The rule filter definition over alert-events.
  Schedule schedule = 7; // Rule schedule: The schedule time definition, how often the rule will be active.
  bool enabled = 8; // Rule enabled: The rule activation mode.
  optional string created_at = 9; // Rule created_at: The date-time when the rule was created.
  optional string updated_at = 10; // Rule updated_at: The date-time when the rule was updated.
}
