syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "protoc-gen-openapiv3/options/annotations.proto";

message ActivitySchedule {
  option (grpc.gateway.protoc_gen_openapiv3.options.openapiv3_schema) = {
    json_schema: {
      title: "Alert activity schedule"
      description: "Defines when an alert should be active based on days of the week and time windows"
      required: [
        "day_of_week",
        "start_time",
        "end_time"
      ]
    }
  };
  repeated DayOfWeek day_of_week = 1 [(grpc.gateway.protoc_gen_openapiv3.options.openapiv3_field) = {example: "[\"DAY_OF_WEEK_MONDAY_OR_UNSPECIFIED\", \"DAY_OF_WEEK_TUESDAY\"]"}];
  TimeOfDay start_time = 2 [(grpc.gateway.protoc_gen_openapiv3.options.openapiv3_field) = {description: "Start time of the alert activity"}];
  TimeOfDay end_time = 3 [(grpc.gateway.protoc_gen_openapiv3.options.openapiv3_field) = {description: "End time of the alert activity"}];
}
enum DayOfWeek {
  DAY_OF_WEEK_MONDAY_OR_UNSPECIFIED = 0;
  DAY_OF_WEEK_TUESDAY = 1;
  DAY_OF_WEEK_WEDNESDAY = 2;
  DAY_OF_WEEK_THURSDAY = 3;
  DAY_OF_WEEK_FRIDAY = 4;
  DAY_OF_WEEK_SATURDAY = 5;
  DAY_OF_WEEK_SUNDAY = 6;
}
message TimeOfDay {
  option (grpc.gateway.protoc_gen_openapiv3.options.openapiv3_schema) = {
    json_schema: {
      title: "Time of day"
      description: "Represents a specific time in a 24-hour format"
      required: [
        "hours",
        "minutes"
      ]
    }
  };
  // Hours of day in 24 hour format. Should be from 0 to 23.
  int32 hours = 1 [(grpc.gateway.protoc_gen_openapiv3.options.openapiv3_field) = {
    example: "14"
    pattern: "^([01][0-9]|2[0-3]|[0-9])$"
  }];
  // Minutes of hour of day. Must be from 0 to 59.
  int32 minutes = 2 [(grpc.gateway.protoc_gen_openapiv3.options.openapiv3_field) = {
    example: "30"
    pattern: "^([0-5][0-9]|[0-9])$"
  }];
}
