syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";

message LogsFilter {
  oneof filter_type {
    LuceneFilter lucene_filter = 1;
    // DPXL will be added here in the future
    //google.protobuf.StringValue dpxl = 2;
  }
}
message LuceneFilter {
  google.protobuf.StringValue lucene_query = 1;
  LabelFilters label_filters = 2;
}

message LabelFilters {
  repeated LabelFilterType application_name = 1;
  repeated LabelFilterType subsystem_name = 2;
  repeated LogSeverity severities = 3;
}

message LabelFilterType {
  google.protobuf.StringValue value = 1;
  LogFilterOperationType operation = 2;
}

enum LogFilterOperationType {
  LOG_FILTER_OPERATION_TYPE_IS_OR_UNSPECIFIED = 0;
  LOG_FILTER_OPERATION_TYPE_INCLUDES = 1;
  LOG_FILTER_OPERATION_TYPE_ENDS_WITH = 2;
  LOG_FILTER_OPERATION_TYPE_STARTS_WITH =3;
}

enum LogSeverity{
  LOG_SEVERITY_VERBOSE_UNSPECIFIED = 0;
  LOG_SEVERITY_DEBUG = 1;
  LOG_SEVERITY_INFO = 2;
  LOG_SEVERITY_WARNING = 3;
  LOG_SEVERITY_ERROR = 4;
  LOG_SEVERITY_CRITICAL = 5;
}
