syntax = "proto3";

package com.coralogixapis.alerts.v3;

import "google/protobuf/wrappers.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

message TracingFilter {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Tracing filter"
      description: "Filter configuration for tracing-based alerts"
      required: ["filter_type"]
    }
  };
  oneof filter_type {
    TracingSimpleFilter simple_filter = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Simple filter using latency threshold and label filters"}];
  }
}
message TracingSimpleFilter {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Simple tracing filter"
      description: "Basic filter configuration using a latency threshold and label filters"
      required: ["latency_threshold_ms"]
    }
  };
  TracingLabelFilters tracing_label_filters = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "Trace label filters"}];
  google.protobuf.UInt64Value latency_threshold_ms = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "The latency threshold to filter traces in milliseconds"
    example: "1000"
    pattern: "^\\d+$"
  }];
}

message TracingLabelFilters {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Tracing label filters"
      description: "Filters for application name, subsystem name, service name, operation name and span fields"
    }
  };
  repeated TracingFilterType application_name = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Filter by application names"
    min_items: 0
  }];
  repeated TracingFilterType subsystem_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Filter by subsystem names"
    min_items: 0
  }];
  repeated TracingFilterType service_name = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Filter by service names"
    min_items: 0
  }];
  repeated TracingFilterType operation_name = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Filter by operation names"
    min_items: 0
  }];
  repeated TracingSpanFieldsFilterType span_fields = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "Filter by span fields"
    min_items: 0
  }];
}
message TracingSpanFieldsFilterType {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Tracing span fields filter type"
      description: "A filter for span fields in trace entries"
      required: [
        "key",
        "filter_type"
      ]
    }
  };
  google.protobuf.StringValue key = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "The key of the span field to filter by"
    example: "\"span.field.key\""
    pattern: "^\\w+\\.\\w+$"
  }];
  TracingFilterType filter_type = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {description: "The FilterType to filter by."}];
}

message TracingFilterType {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      title: "Tracing filter type"
      description: "Filter type for trace entries"
      required: [
        "values",
        "operation"
      ]
    }
  };
  repeated google.protobuf.StringValue values = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "The values of the label to filter by"
    example: "[\"value1\", \"value2\"]"
    min_items: 1
  }];
  TracingFilterOperationType operation = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    description: "The operation to perform on the label value"
    example: "\"TRACING_FILTER_OPERATION_TYPE_STARTS_WITH\""
  }];
}

enum TracingFilterOperationType {
  TRACING_FILTER_OPERATION_TYPE_IS_OR_UNSPECIFIED = 0;
  TRACING_FILTER_OPERATION_TYPE_INCLUDES = 1;
  TRACING_FILTER_OPERATION_TYPE_ENDS_WITH = 2;
  TRACING_FILTER_OPERATION_TYPE_STARTS_WITH = 3;
  TRACING_FILTER_OPERATION_TYPE_IS_NOT = 4;
}
