syntax = "proto3";

package com.coralogixapis.dashboards.v1.services;

import "com/coralogix/common/v1/audit_log.proto";
import "com/coralogixapis/dashboards/v1/ast/annotation.proto";
import "com/coralogixapis/dashboards/v1/ast/filter.proto";
import "com/coralogixapis/dashboards/v1/common/annotation_event.proto";
import "com/coralogixapis/dashboards/v1/common/group.proto";
import "com/coralogixapis/dashboards/v1/common/grouped_series.proto";
import "com/coralogixapis/dashboards/v1/common/pagination.proto";
import "com/coralogixapis/dashboards/v1/common/span_field.proto";
import "com/coralogixapis/dashboards/v1/common/spans_aggregation.proto";
import "com/coralogixapis/dashboards/v1/common/time_frame.proto";
import "com/coralogixapis/dashboards/v1/common/time_series.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "google/api/annotations.proto";

service SpansDataSourceService {
  rpc SearchSpansTimeSeries(SearchSpansTimeSeriesRequest) returns (SearchSpansTimeSeriesResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "search spans as time series";
    option (google.api.http) = {
      get: "/dashboards/spans/time-series"
    };
  }
  rpc SearchSpansEvents(SearchSpansEventsRequest) returns (SearchSpansEventsResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "search spans as events";
    option (google.api.http) = {
      get: "/dashboards/spans/events"
    };
  }
  rpc SearchSpansEventGroups(SearchSpansEventGroupsRequest) returns (SearchSpansEventGroupsResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "search spans as event groups";
    option (google.api.http) = {
      get: "/dashboards/spans/event-groups"
    };
  }
  rpc SearchGroupedSpansSeries(SearchGroupedSpansSeriesRequest) returns (SearchGroupedSpansSeriesResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "grouped spans series";
    option (google.api.http) = {
      get: "/dashboards/spans/grouped-series"
    };
  }
  rpc SearchSpansGroupedTimeSeries(SearchSpansGroupedTimeSeriesRequest) returns (SearchSpansGroupedTimeSeriesResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "search spans grouped time series";
    option (google.api.http) = {
      get: "/dashboards/spans/grouped-time-series"
    };
  }
  rpc SearchSpansAnnotationEvents(SearchSpansAnnotationEventsRequest) returns (SearchSpansAnnotationEventsResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "search spans annotation events";
    option (google.api.http) = {
      get: "/dashboards/spans/annotation-events"
    };
  }
  rpc SearchSpansGroupedValues(SearchSpansGroupedValuesRequest) returns (SearchSpansGroupedValuesResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "search spans grouped values";
    option (google.api.http) = {
      get: "/dashboards/spans/grouped-values"
    };
  }
}

message SearchSpansTimeSeriesRequest {
  common.TimeFrame time_frame = 1;
  google.protobuf.Duration interval = 2;
  repeated ast.Filter.SpansFilter filters = 3;
  google.protobuf.StringValue lucene_query = 4;
  repeated common.SpanField group_by = 5;
  repeated common.SpansAggregation aggregations = 6;
  google.protobuf.Int32Value limit = 7;
}

message SearchSpansTimeSeriesResponse {
  repeated common.TimeSeries time_series = 1;
  google.protobuf.Int64Value total = 2;
}

message SearchSpansEventsRequest {
  common.TimeFrame time_frame = 1;
  repeated ast.Filter.SpansFilter filters = 2;
  google.protobuf.StringValue lucene_query = 3;
  Pagination pagination = 4;

  message Pagination {
    google.protobuf.Int32Value offset = 1;
    google.protobuf.Int32Value limit = 2;
  }
}

message SearchSpansEventsResponse {
  google.protobuf.Int64Value total = 1;
  repeated SpansEvent spans_events = 2;
}

message SearchSpansEventGroupsRequest {
  common.TimeFrame time_frame = 1;
  repeated ast.Filter.SpansFilter filters = 2;
  google.protobuf.StringValue lucene_query = 3;
  repeated common.SpanField group_by_fields = 4;
  repeated common.SpansAggregation aggregations = 5;
  common.Pagination pagination = 6;
}

message SearchSpansEventGroupsResponse {
  repeated common.MultiGroup groups = 1;
}

message SearchGroupedSpansSeriesRequest {
  common.TimeFrame time_frame = 1;
  repeated ast.Filter.SpansFilter filters = 2;
  repeated common.SpanField group_by_fields = 3;
  common.SpansAggregation aggregation = 4;
  google.protobuf.StringValue lucene_query = 5;
  repeated Limit limits = 6;

  message Limit {
    repeated common.SpanField group_by_fields = 1;
    google.protobuf.Int32Value limit = 2;
    google.protobuf.Int32Value min_percentage = 3;
  }
}

message SearchGroupedSpansSeriesResponse {
  repeated common.GroupedSeries series = 1;
}

message SearchSpansGroupedTimeSeriesRequest {
  common.TimeFrame time_frame = 1;
  google.protobuf.Duration interval = 2;
  repeated ast.Filter.SpansFilter filters = 3;
  common.SpansAggregation aggregation = 4;
  google.protobuf.StringValue lucene_query = 5;
  repeated GroupBy group_by = 6;

  message GroupBy {
    repeated common.SpanField fields = 1;
    google.protobuf.Int32Value limit = 2;
    google.protobuf.Int32Value min_percentage = 3;
  }
}

message SearchSpansGroupedTimeSeriesResponse {
  repeated common.GroupedSeries series = 1;
}

message SpansEvent {
  google.protobuf.StringValue span_id = 1;
  google.protobuf.StringValue trace_id = 2;
  google.protobuf.StringValue parent_span_id = 3;
  Metadata metadata = 4;
  google.protobuf.Timestamp start_time = 5;
  google.protobuf.Duration duration = 6;
  repeated Tag tags = 7;
  repeated Tag process_tags = 8;
  repeated Log logs = 9;

  message Metadata {
    google.protobuf.StringValue application_name = 1;
    google.protobuf.StringValue subsystem_name = 2;
    google.protobuf.StringValue service_name = 3;
    google.protobuf.StringValue operation_name = 4;
  }

  message Tag {
    google.protobuf.StringValue key = 1;
    google.protobuf.StringValue value = 2;
  }

  message Log {
    google.protobuf.Timestamp timestamp = 1;
    map<string, google.protobuf.StringValue> fields = 2;
  }
}

message SearchSpansAnnotationEventsRequest {
  common.TimeFrame time_frame = 1;
  repeated ast.Filter.SpansFilter filters = 2;
  google.protobuf.StringValue lucene_query = 3;
  ast.Annotation.SpansSource.Strategy strategy = 4;
  google.protobuf.Int32Value limit = 5;
}

message SearchSpansAnnotationEventsResponse {
  repeated common.AnnotationEvent annotation_events = 1;
}

message SearchSpansGroupedValuesRequest {
  common.TimeFrame time_frame = 1;
  repeated ast.Filter.SpansFilter filters = 2;
  google.protobuf.StringValue lucene_query = 3;
  repeated common.SpanField group_by = 4;
  common.SpansAggregation aggregation = 5;
  google.protobuf.Int32Value limit = 6;
}

message SearchSpansGroupedValuesResponse {
  repeated common.Group groups = 1;
  bool is_limit_exceeded = 2;
  google.protobuf.Int64Value total = 3;
}
